--- a/public/estrelas.html
+++ b/public/estrelas.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8" />
   <title>Votação de Estrelas – Grão Direto</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- MUITO IMPORTANTE PARA MOBILE -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
     :root {
@@ -29,18 +30,18 @@
       min-height: 100vh;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
       background:
         radial-gradient(circle at top left, #dcfce7 0, transparent 45%),
         radial-gradient(circle at top right, #e0f2fe 0, transparent 45%),
         linear-gradient(to bottom, #f9fafb, #e5e7eb);
       color: var(--text);
       line-height: 1.5;
-      padding: 20px;
     }
     .container {
       width: 100%;
       max-width: 960px;
+      padding: 24px 12px 40px;
     }
     .card {
       background: var(--card-bg);
@@ -50,11 +51,7 @@
       box-shadow:
         0 18px 45px rgba(15, 23, 42, 0.10),
         0 0 0 1px rgba(255, 255, 255, 0.9) inset;
-    }
-    @media (min-width: 768px) {
-      .card {
-        padding: 22px 24px;
-      }
+      margin-bottom: 20px;
     }
     .header {
       display:flex;
@@ -62,103 +59,28 @@
       align-items:flex-start;
       gap:12px;
       margin-bottom:12px;
-      flex-wrap: wrap;
     }
     .title {
-      font-size:18px;
-      font-weight:700;
-    }
-    @media (min-width: 768px) {
-      .title {
-        font-size:20px;
-      }
+      font-family:"Montserrat",system-ui;
+      font-size:20px;
+      font-weight:600;
     }
     .subtitle {
-      font-size:12px;
+      font-size:13px;
       color:var(--muted);
       margin-top:4px;
-    }
-    @media (min-width: 768px) {
-      .subtitle {
-        font-size:13px;
-      }
     }
     .badge {
       padding:5px 12px;
       border-radius:999px;
-      font-size:10px;
-      font-weight:700;
+      font-size:11px;
+      font-weight:600;
       text-transform:uppercase;
       letter-spacing:0.08em;
       background:#ecfdf5;
       color:#166534;
       border:1px solid #bbf7d0;
       white-space:nowrap;
-    }
-    @media (min-width: 768px) {
-      .badge {
-        font-size:11px;
-      }
-    }
-    .top-info {
-      font-size:12px;
-      margin-bottom:10px;
-      line-height: 1.6;
-    }
-    @media (min-width: 768px) {
-      .top-info {
-        font-size:13px;
-        margin-bottom:6px;
-      }
-    }
-    .top-info span {
-      display:block;
-      margin-bottom:4px;
-    }
-    @media (min-width: 768px) {
-      .top-info span {
-        display:inline-block;
-        margin-right:8px;
-        margin-bottom:0;
-      }
-    }
-    .btn {
-      padding:8px 16px;
-      border-radius:999px;
-      border:none;
-      cursor:pointer;
-      font-size:13px;
-      font-weight:700;
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      gap:6px;
-      white-space:nowrap;
-      margin-bottom: 12px;
-    }
-    @media (min-width: 768px) {
-      .btn {
-        padding:7px 14px;
-      }
-    }
-    .btn-primary {
-      background:var(--primary);
-      color:#ffffff;
-      box-shadow:0 10px 24px rgba(22,163,74,0.45);
-      transition: all 0.2s;
-    }
-    .btn-primary:hover {
-      transform: translateY(-1px);
-      box-shadow:0 16px 32px rgba(22,163,74,0.55);
-    }
-    .btn-secondary {
-      background:#f9fafb;
-      color:#111827;
-      border:1px solid #e5e7eb;
-      transition: all 0.2s;
-    }
-    .btn-secondary:hover {
-      background:#f3f4f6;
     }
     .list {
       max-height: 480px;
@@ -169,54 +91,98 @@
       display:flex;
       justify-content:space-between;
       align-items:center;
-      gap:10px;
-      padding:12px 10px;
+      gap:12px;
+      padding:10px 12px;
       border-radius:12px;
       border:1px solid #e5e7eb;
       background:#ffffff;
       margin-bottom:8px;
-      flex-wrap: wrap;
-    }
-    @media (min-width: 768px) {
-      .item {
-        padding:10px 12px;
-        flex-wrap: nowrap;
-      }
     }
     .item-info {
       font-size:13px;
-      flex: 1;
-      min-width: 0;
     }
     .item-info strong {
       display:block;
       margin-bottom:2px;
-      word-wrap: break-word;
     }
     .muted {
       font-size:12px;
       color:var(--muted);
     }
-    .status {
-      font-size:12px;
-      margin-top:8px;
-      padding: 8px 12px;
-      border-radius: 8px;
+    .btn {
+      padding:7px 14px;
+      border-radius:999px;
+      border:none;
+      cursor:pointer;
+      font-size:13px;
+      font-weight:600;
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      gap:6px;
+      white-space:nowrap;
     }
-    @media (min-width: 768px) {
-      .status {
-        font-size:13px;
-      }
+    .btn-primary {
+      background:var(--primary);
+      color:#ffffff;
+      box-shadow:0 10px 24px rgba(22,163,74,0.45);
+    }
+    .btn-primary:hover {
+      transform: translateY(-1px);
+      box-shadow:0 16px 32px rgba(22,163,74,0.55);
+    }
+    .btn-secondary {
+      background:#f9fafb;
+      color:#111827;
+      border:1px solid #e5e7eb;
+    }
+    .status {
+      font-size:13px;
+      margin-top:8px;
     }
     .status-error {
       color:#b91c1c;
-      background: #fef2f2;
-      border: 1px solid #fecaca;
     }
     .status-success {
       color:#166534;
-      background: #f0fdf4;
-      border: 1px solid #bbf7d0;
+    }
+    .top-info {
+      font-size:13px;
+      margin-bottom:6px;
+    }
+    .top-info span {
+      display:inline-block;
+      margin-right:8px;
+    }
+
+    /* Ajustes mobile */
+    @media (max-width: 768px) {
+      .container {
+        padding: 18px 10px 28px;
+      }
+      .card {
+        padding: 16px 14px;
+      }
+      .title {
+        font-size:18px;
+      }
+      .subtitle {
+        font-size:12px;
+      }
+      .btn {
+        font-size:14px;
+        padding:8px 16px;
+      }
+      .item {
+        flex-direction:column;
+        align-items:flex-start;
+      }
+      .item-info {
+        font-size:14px;
+      }
+      .list {
+        max-height: none;
+      }
     }
   </style>
 </head>
@@ -225,7 +191,7 @@
     <div class="card">
       <div class="header">
         <div>
-          <div class="title">Votação de Estrelas</div>
+          <div class="title">Votação de estrelas</div>
           <div class="subtitle" id="subtitle">
             Carregando informações...
           </div>
@@ -233,9 +199,9 @@
         <div class="badge">Estrelas</div>
       </div>
       <div class="top-info" id="top-info"></div>
-      <button class="btn btn-secondary" id="btn-voltar">&larr; Voltar para a Votação</button>
+      <button class="btn btn-secondary" id="btn-voltar">&larr; Voltar para votação</button>
       <div class="list" id="lista-topicos"></div>
-      <div id="status" class="status" style="display: none;"></div>
+      <div id="status" class="status"></div>
     </div>
   </div>
 
@@ -278,7 +244,6 @@
       }
 
       statusEl.textContent = "";
-      statusEl.style.display = "none";
       statusEl.className = "status";
 
       try {
@@ -316,7 +281,7 @@
           if (t.proprioTopico) {
             const span = document.createElement("span");
             span.className = "muted";
-            span.textContent = "Seu tópico (não pode votar)";
+            span.textContent = "Indisponível";
             actions.appendChild(span);
           } else if (t.jaVotou) {
             const span = document.createElement("span");
@@ -331,7 +296,7 @@
           } else {
             const btn = document.createElement("button");
             btn.className = "btn btn-primary";
-            btn.textContent = "⭐ Dar Estrela";
+            btn.textContent = "Dar estrela";
             btn.addEventListener("click", async () => {
               try {
                 await api("/api/estrelas", {
@@ -342,14 +307,12 @@
                     topicoId: t.id
                   })
                 });
-                statusEl.textContent = "✓ Estrela registrada com sucesso!";
+                statusEl.textContent = "Estrela registrada com sucesso.";
                 statusEl.className = "status status-success";
-                statusEl.style.display = "block";
                 await carregar();
               } catch (err) {
-                statusEl.textContent = "✗ " + err.message;
+                statusEl.textContent = err.message;
                 statusEl.className = "status status-error";
-                statusEl.style.display = "block";
               }
             });
             actions.appendChild(btn);
@@ -361,9 +324,8 @@
         });
 
       } catch (err) {
-        statusEl.textContent = "✗ " + err.message;
+        statusEl.textContent = err.message;
         statusEl.className = "status status-error";
-        statusEl.style.display = "block";
       }
     }
 
